--- a/Combined+Pages.html
+++ b/Combined+Pages.html
@@ -46,6 +46,8 @@ addSbtPlugin(&quot;org.lifty&quot; % &quot;lifty&quot; % &quot;1.7.4&quot;)
 </p><pre><code>resolvers += Resolver.url(&quot;sbt-plugin-snapshots&quot;, new URL(&quot;http://scalasbt.artifactoryonline.com/scalasbt/sbt-plugin-snapshots/&quot;))(Resolver.ivyStylePatterns)
 
 addSbtPlugin(&quot;org.lifty&quot; % &quot;lifty&quot; % &quot;1.7.5-SNAPSHOT&quot;)
+</code></pre><p>and then add the following to your <code>~/.sbt/build.sbt</code> file
+</p><pre><code>seq( Lifty.liftySettings : _*)
 </code></pre><p>Whenever you’re in a SBT session you now have the lifty command avaiable. The lifty command has tab-completion enabled to make it faster/easier to use. Try typing lifty and hit tab in an SBT session.</p><h1 id="Teaching+Lifty+Recipes">Teaching Lifty Recipes</h1><p>Now that you have Lifty installed you need to teach it how to generate different files for you. You do so by pointing lifty to a recipe. Here’s what you would have to type to teach Lifty about Lift projects and templates
 </p><pre><code>&gt; lifty learn lift https://raw.github.com/Lifty/lifty/master/lifty-recipe/lifty.json
 </code></pre><p>This tells <code>lifty</code> that you want to add a new recipe and give it the name <code>lift</code> and that lifty can find the description of the recipe at the given url.
