--- a/Installing+The+Plugin.html
+++ b/Installing+The+Plugin.html
@@ -42,6 +42,8 @@ addSbtPlugin(&quot;org.lifty&quot; % &quot;lifty&quot; % &quot;1.7.4&quot;)
 </p><pre><code>resolvers += Resolver.url(&quot;sbt-plugin-snapshots&quot;, new URL(&quot;http://scalasbt.artifactoryonline.com/scalasbt/sbt-plugin-snapshots/&quot;))(Resolver.ivyStylePatterns)
 
 addSbtPlugin(&quot;org.lifty&quot; % &quot;lifty&quot; % &quot;1.7.5-SNAPSHOT&quot;)
+</code></pre><p>and then add the following to your <code>~/.sbt/build.sbt</code> file
+</p><pre><code>seq( Lifty.liftySettings : _*)
 </code></pre><p>Whenever you’re in a SBT session you now have the lifty command avaiable. The lifty command has tab-completion enabled to make it faster/easier to use. Try typing lifty and hit tab in an SBT session.</p><div class="tocwrapper show">
       <a class="tochead nav" style="display: none" href="#toc">❦</a>
       <a name="toc"></a>
